--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.3",
+    "@react-navigation/native": "^5.9.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "chroma-js": "^2.1.0",
+    "emoji-mart": "^3.0.1",
+    "rc-slider": "^9.7.1",
     "react": "^17.0.1",
+    "react-color": "^2.19.3",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
+    "react-material-ui-form-validator": "^2.1.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-sortable-hoc": "^1.11.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
